# CHIP-8

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  format.sh  test.ch8
ROMS/: fibonacci.ch8  helloworld.ch8
assembler/: assembler.py  helloworld.asm
src/: chip8.cpp  chip8.hpp  debugger.cpp  debugger.hpp  debugger_cli.cpp  debugger_cli.hpp  display.cpp  display.hpp  input.cpp  input.hpp  main.cpp  memory.cpp  memory.hpp  register.cpp  register.hpp  stack.cpp  stack.hpp  test_access.cpp  test_access.hpp
test/: test_opcodes.cpp
